--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rebass/grid": "^6.0.0-7",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "codenation-jest-score": "https://github.com/thecodenation/codenation-jest-score/tarball/master",
     "core-js": "^2.5.5",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.1.9-1",
